[tool.poetry]
name = "goit-py-web-hw-11"
version = "0.1.0"
description = ""
authors = ["Serge-Moskalenko <skmos2019@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
alembic = "^1.15.2"
sqlalchemy = "^2.0.40"
asyncpg = "^0.30.0"
uvicorn = "^0.34.0"
email-validator = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
